# gfunk

./: CMakeLists.txt  calc.glade
sources/: CMakeLists.txt  gldraw.cc  graph.frag  graph.vert  main.cc  parser.cc  parser.h  rangeparser.cc
sources/include/: gldraw.h  parser.h  rangeparser.h
